fslclaimsassetv2/objects/DE_Claim__c.object
<CustomObject>
    <fields>
        <fullName>DE_Claim_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DE_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>DE_Claim_Product__c.DE_Total_Amount__c</summarizedField>
        <summaryForeignKey>DE_Claim_Product__c.DE_Claim__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DE_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Claim</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Claim-{00000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>